--- a/docs/pages/application-access/guides.mdx
+++ b/docs/pages/application-access/guides.mdx
@@ -18,6 +18,9 @@ layout: tocless-doc
     How to access AWS Management Console with Teleport Application Access.
   </Tile>
   <Tile icon="wrench" title="Dynamic Registration" href="./guides/dynamic-registration.mdx">
-    Register/unregister apps without restarting Teleport.
+    How to register/unregister apps without restarting Teleport.
+  </Tile>
+  <Tile icon="wand" title="Automation" href="./guides/automation.mdx">
+    How to issue app access certificates for robot accounts.
   </Tile>
 </TileSet>
