--- a/docs/pages/application-access/introduction.mdx
+++ b/docs/pages/application-access/introduction.mdx
@@ -55,7 +55,10 @@ Get started with Application Access in a 10 minute [guide](./getting-started.mdx
     How to access AWS Management Console with Teleport Application Access.
   </Tile>
   <Tile icon="wrench" title="Dynamic Registration" href="./guides/dynamic-registration.mdx">
-    Register/unregister apps without restarting Teleport.
+    How to register/unregister apps without restarting Teleport.
+  </Tile>
+  <Tile icon="wand" title="Automation" href="./guides/automation.mdx">
+    How to issue app access certificates for robot accounts.
   </Tile>
 </TileSet>
 
