--- a/docs/pages/getting-started/linux-server.mdx
+++ b/docs/pages/getting-started/linux-server.mdx
@@ -75,7 +75,7 @@ Take a look at the [Installation Guide](../installation.mdx) for more options.
 Generate a configuration file for Teleport using `teleport configure`.
 
 <Tabs>
-  <TabItem label="Public internet eployment with Let's Encrypt">
+  <TabItem label="Public internet deployment with Let's Encrypt">
   Teleport uses Acme protocol to receive automatic TLS certificates from [Letsencrypt](https://letsencrypt.org).
 
   First, set up an email to receive updates from Let's Encrypt. Use a valid DNS name for a cluster name.
