--- a/docs/pages/server-access/guides/ssh-pam.mdx
+++ b/docs/pages/server-access/guides/ssh-pam.mdx
@@ -275,7 +275,7 @@ mkdir -p /etc/pam-exec.d
 cat > /etc/pam-exec.d/teleport_acct <<EOF
 #!/bin/sh
 COMMENT="User ${TELEPORT_LOGIN} for ${TELEPORT_USERNAME} with roles ${TELEPORT_ROLES} created by Teleport."
-/bin/id -u "$TELEPORT_LOGIN" 2>&1 >/dev/null || /sbin/useradd -m -s /bin/bash -c "$COMMENT" "$TELEPORT_LOGIN" 2>> /tmp/pam.error
+/bin/id -u "${TELEPORT_LOGIN}" 2>&1 >/dev/null || /sbin/useradd -m -s /bin/bash -c "${COMMENT}" "${TELEPORT_LOGIN}" 2>> /tmp/pam.error
 exit 0
 EOF
 chmod +x /etc/pam-exec.d/teleport_acct
